--- a/requirements_txt.txt
+++ b/requirements_txt.txt
@@ -1,6 +1,6 @@
-streamlit==1.29.0
-tensorflow==2.15.0
-numpy==1.24.3
-pandas==2.0.3
-pillow==10.0.1
-matplotlib==3.7.2
+streamlit>=1.28.0
+tensorflow>=2.13.0
+numpy>=1.24.0
+pandas>=2.0.0
+Pillow>=10.0.0
+matplotlib>=3.7.0
